fix: use pre-wrap for match teams

--- a/angular/applications/home/src/app/modules/management-portal/modules/matches/pages/list/list-page.component.scss
+++ b/angular/applications/home/src/app/modules/management-portal/modules/matches/pages/list/list-page.component.scss
@@ -4,6 +4,6 @@ div.offset-sm-6 app-button {
   margin-top: 0px;
 }
 
-td[mat-cell] {
-  white-space: pre;
+td.mat-column-teams {
+  white-space: pre-wrap;
 }
